fixed the donation box not centered

--- a/public/css/donation.css
+++ b/public/css/donation.css
@@ -1,6 +1,6 @@
 body {
   font-family: Verdana, Tahoma, sans-serif;
-  background-color: #CFDBD5;
+  background-color: #cfdbd5;
 }
 
 main {
@@ -95,6 +95,7 @@ h2 {
   flex-direction: column;
   /* justify-content: center; */
   /* align-items: center; */
+  align-self: center;
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
